--- a/config/database.yml
+++ b/config/database.yml
@@ -3,43 +3,43 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#
-# default: &default
-#   adapter: sqlite3
-#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-#   timeout: 5000
-#
-# development:
-#   <<: *default
-#   database: db/development.sqlite3
-#
-# # Warning: The database defined as "test" will be erased and
-# # re-generated from your development database when you run "rake".
-# # Do not set this db to the same as development or production.
-# test:
-#   <<: *default
-#   database: db/test.sqlite3
-#
-# production:
-#   <<: *default
-#   database: db/production.sqlite3
+
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  username: postgres
-  password: xxxxx #<-- which you have defiend while installing postgresql
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
 development:
   <<: *default
-  database: project_development
+  database: db/development.sqlite3
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: project_test
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  database: project_production
-  username: username
-  password: <%= ENV['PROJECT_DATABASE_PASSWORD'] %>
+  database: db/production.sqlite3
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   username: postgres
+#   password: sleep #<-- which you have defiend while installing postgresql
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#
+# development:
+#   <<: *default
+#   database: development
+#
+# test:
+#   <<: *default
+#   database: project_test
+#
+# production:
+#   <<: *default
+#   database: production
+#   username: username
+#   password: <%= ENV['PROJECT_DATABASE_PASSWORD'] %>
