--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ development:
   <<: *default
   database: db/development.sqlite3
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
 test:
   <<: *default
   database: db/test.sqlite3
@@ -23,12 +23,12 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
-# default: &default
-#   adapter: postgresql
-#   encoding: unicode
-#   username: postgres
-#   password: sleep #<-- which you have defiend while installing postgresql
-#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  username: postgres
+  password: sleep #<-- which you have defiend while installing postgresql
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 #
 # development:
 #   <<: *default
@@ -43,3 +43,31 @@ production:
 #   database: production
 #   username: username
 #   password: <%= ENV['PROJECT_DATABASE_PASSWORD'] %>
+
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   host: localhost
+#   port: 5432
+#   # For details on connection pooling, see Rails configuration guide
+#   # http://guides.rubyonrails.org/configuring.html#database-pooling
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
+#   username: postgres
+#   password: sleep
+#
+# development:
+#   <<: *default
+#   database: jojoy_dev
+#
+# test:
+#   <<: *default
+#   database: jojoy_test
+#
+# staging:
+#   <<: *default
+#   database: jojoy
+#
+# production:
+#   <<: *default
+#   database: jojoy
