--- a/config/database.yml
+++ b/config/database.yml
@@ -1,34 +1,34 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# # SQLite version 3.x
+# #   gem install sqlite3
+# #
+# #   Ensure the SQLite 3 gem is defined in your Gemfile
+# #   gem 'sqlite3'
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-# # Warning: The database defined as "test" will be erased and
-# # re-generated from your development database when you run "rake".
-# # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
-default: &default
-  adapter: postgresql
-  encoding: unicode
-  username: postgres
-  password: sleep #<-- which you have defiend while installing postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+# default: &default
+#   adapter: sqlite3
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
+#
+# development:
+#   <<: *default
+#   database: db/development.sqlite3
+#
+# # # Warning: The database defined as "test" will be erased and
+# # # re-generated from your development database when you run "rake".
+# # # Do not set this db to the same as development or production.
+# test:
+#   <<: *default
+#   database: db/test.sqlite3
+#
+# production:
+#   <<: *default
+#   database: db/production.sqlite3
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   username: postgres
+#   password: sleep #<-- which you have defiend while installing postgresql
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 #
 # development:
 #   <<: *default
@@ -44,30 +44,30 @@ default: &default
 #   username: username
 #   password: <%= ENV['PROJECT_DATABASE_PASSWORD'] %>
 
-# default: &default
-#   adapter: postgresql
-#   encoding: unicode
-#   host: localhost
-#   port: 5432
-#   # For details on connection pooling, see Rails configuration guide
-#   # http://guides.rubyonrails.org/configuring.html#database-pooling
-#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-#   timeout: 5000
-#   username: postgres
-#   password: sleep
-#
-# development:
-#   <<: *default
-#   database: jojoy_dev
-#
-# test:
-#   <<: *default
-#   database: jojoy_test
-#
-# staging:
-#   <<: *default
-#   database: jojoy
-#
-# production:
-#   <<: *default
-#   database: jojoy
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  port: 5432
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+  username: postgres
+  password: sleep
+
+development:
+  <<: *default
+  database: jojoy_dev
+
+test:
+  <<: *default
+  database: jojoy_test
+
+staging:
+  <<: *default
+  database: jojoy
+
+production:
+  <<: *default
+  database: jojoy
